Version 2.0 (Head)
=============
- Editor Framework: Added input validation using XSL condition for a complete panel
- Added stylesheet to generate search masks from searchfields.xml
- removed MCRCStoreLocalFileSystem and MCRCStoreRemoteFTP
- removed MCRJDOMTransformXPathToJDOM
- removed org.mycore.backend.remote package
- removed org.mycore.backend.xmldb package
- removed org.mycore.user package and dependencies
- removed org.mycore.services.query package and dependencies
- removed MCRXMLContainer and dependencies
- marked MCRArgumentChecker as deprecated
- marked MCRDefaults as deprecated
- removed MCRUploadServlet2
- LayoutServlet removed, replaced by MCRLayoutService
- Use the IBM ICU library to handle calendars in MCRMetaHistoryDate. Now the searchable integer
  of this metadata element is the Julian Day number. 
- move the classes of org.mycore.user2 to org.mycore.user
- add a WebService and URIResolver access to the MCRLinkTable
- removed support for MCRSessionID request parameter:
   use HttpSession to access MCRSession
- MCRMailer: retry sending mails if first attempt fails
- new Classification editor with less database commits
- Upgrade to FCK-Editor 2.4
- compiles on Java 6
- The file deprecated.properties contains a list of properties that should (but must not) be renamed

Version 1.3
===========
 - Removed the old persistence layer
 - Changed CreateDatabase to the CM8 tree only.
 - Redesign of the CM8 persitence
 - Changed search persistence to use EventHandler model.
 - Added an EventHandler for the LinkTableManager
 - Removed TypedContent construct from the datamodel classes.
 - Added MCRMetaISO8601Date as replacement for MCRMetaDate.
 - Added the new Access Controll system as replacement for the old user privilege system.
 - Built a new small user administartion system without privileges and memberships of groups.
 - Complete redesign and reimplementation of the query system.
 - Redesign of remote access. Now WebServices, OAI and Z3950 is used